app/main/default/objects/Hello_Object__c/Hello_Object__c.object-meta.xml
<CustomObject>
    <description>Hello_Object description</description>
    <fields>
        <fullName>Test2__c</fullName>
        <description>Test2 description</description>
        <label>Test2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Test_Email__c</fullName>
        <label>Test Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Test_Picklist__c</fullName>
        <description>Test_Picklist description</description>
        <label>Test Picklist</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Test One</fullName>
                </value>
                <value>
                    <fullName>Test  Two</fullName>
                </value>
                <value>
                    <fullName>Test Three</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Test__c</fullName>
        <description>Test description</description>
        <label>Test</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <label>Hello Object</label>
    <nameField>
        <label>Hello Object Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Hello Objects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>