app/main/default/objects/Hello_Object__c/fields/Test2__c.field-meta.xml
<CustomObject>
    <fields>
        <fullName>Test2__c</fullName>
        <description>Test2 description</description>
        <label>Test2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>