app/main/default/objects/Hello_Object__c/fields/Test__c.field-meta.xml
<CustomObject>
    <fields>
        <fullName>Test__c</fullName>
        <description>Test description</description>
        <label>Test</label>
        <length>150</length>
        <type>Text</type>
    </fields>
</CustomObject>