app/main/default/objects/Hello_Object__c/fields/Test_Email__c.field-meta.xml
<CustomObject>
    <fields>
        <fullName>Test_Email__c</fullName>
        <label>Test Email</label>
        <type>Email</type>
    </fields>
</CustomObject>