app/main/default/objects/Hello_Object__c/fields/Test_Picklist__c.field-meta.xml
<CustomObject>
    <fields>
        <fullName>Test_Picklist__c</fullName>
        <description>Test_Picklist description</description>
        <label>Test Picklist</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Test One</fullName>
                </value>
                <value>
                    <fullName>Test  Two</fullName>
                </value>
                <value>
                    <fullName>Test Three</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>